# NaViT

./: README.md  example.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: publish.yml  python-publish.yml  unit-test.yml
navit/: __init__.py  main.py
